<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="recipeViewModel"
            type="com.example.recipebook.presentation.viewmodel.RecipeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="13dp"
        android:paddingHorizontal="16dp"
        android:paddingBottom="20dp"
        tools:context=".presentation.fragment.RecipeAddEditFragment">

        <ImageView
            android:id="@+id/iv_recipe_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image_blank"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/recipe_image" />


        <EditText
            android:background="@null"
            android:id="@+id/et_recipe_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:autofillHints="1"
            android:textSize="24sp"
            android:textStyle="bold"
            android:hint="@string/input_name_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_recipe_image" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_recipe_portions"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            app:contentPaddingTop="8dp"
            app:contentPaddingBottom="6dp"
            app:contentPaddingLeft="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_recipe_name">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:text="@string/portions"
                    android:labelFor="@+id/et_recipe_portions"></TextView>

                <EditText
                    android:background="@null"
                    android:id="@+id/et_recipe_portions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="1"
                    android:inputType="numberSigned" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_recipe_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:contentPaddingTop="8dp"
            app:contentPaddingBottom="6dp"
            app:contentPaddingLeft="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_recipe_portions">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:text="@string/ingredients"
                    android:labelFor="@+id/et_recipe_ingredients"></TextView>

                <EditText
                    android:background="@null"
                    android:id="@+id/et_recipe_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="text"
                    android:importantForAutofill="no" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_recipe_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:contentPaddingTop="8dp"
            app:contentPaddingBottom="6dp"
            app:contentPaddingLeft="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_recipe_ingredients">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:text="@string/cooking_method"
                    android:labelFor="@+id/et_recipe_text"></TextView>

                <EditText
                    android:background="@null"
                    android:id="@+id/et_recipe_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"

                    android:importantForAutofill="no" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_recipe_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:contentPaddingTop="8dp"
            app:contentPaddingBottom="6dp"
            app:contentPaddingLeft="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_recipe_text">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:text="@string/category"
                    android:labelFor="@+id/spinner_recipe_category"></TextView>

                <Spinner
                    android:id="@+id/spinner_recipe_category"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:selectedItemPosition="@={recipeViewModel.selectedCategoryId}"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_save_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>